2019-1/230/users/4047/executions/1599_2895.log
== TEST (2019-03-25 16:27:36) 
-- CODE:
quantidade= int(input("quantidade de jogos a serem encomendados: "))
valor = float(input("Valor de cada jogo: "))
frete = float (input("valor do frete: "))
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 16:29:12) 
-- CODE:
quantidade= int(input("quantidade de jogos a serem encomendados: "))
valor = float(input("Valor de cada jogo: "))
frete = float (input("valor do frete: "))
total=quantidade*valor+frete
primt(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    primt(total)
NameError: name 'primt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 16:29:32) 
-- CODE:
quantidade= int(input("quantidade de jogos a serem encomendados: "))
valor = float(input("Valor de cada jogo: "))
frete = float (input("valor do frete: "))

total=quantidade*valor+frete
primt(total)
-- EXECUTION TIME:
0.195246
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1599/2895/main.py", line 6, in <module>
    primt(total)
NameError: name 'primt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 16:29:44) 
-- CODE:
quantidade= int(input("quantidade de jogos a serem encomendados: "))
valor = float(input("Valor de cada jogo: "))
frete = float (input("valor do frete: "))

total=quantidade*valor+frete
print(total)
-- EXECUTION TIME:
0.187169
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
